1. 添加用于窗口的缩放的，大一点的按键出来（右上角的cancel[关闭]按钮，右键[desktop]或长按[mobile]） 2. 减缓selection的运行速度 3. 修改tester样式 4. 修复了SclListener的左和下缩放偏移的bug（±号问题） 5. 修复了Selection不能正常focus的bug 6. 修改Window的display 7. 修复了移动端点击多选（IntUi.showSelectImageTable）的bug 8. 启用截图功能（之前被注释了） - 修复一些bug - 优化内存占用 - 添加注解处理 - 重置selection - 代码结构优化 - 支持直接导入加载modtools - TODO